Fixing issue #243395 : no Permgen if JDK >= 1.8